# opensyobon-fork

./: CMakeLists.txt  DxLib.cpp  DxLib.h  README.md  draw.cpp  draw.h  loadg.cpp  main.cpp  main.h  resource.cpp  resource.h
entities/: background.cpp  background.h  block.cpp  block.h  common.h  enemy_instance.cpp  enemy_instance.h  enemy_template.cpp  enemy_template.h  ground.cpp  ground.h  mario.cpp  mario.h
utilities/: DxLib.cpp  DxLib.h  ListIterateHelper.h  color.cpp  color.h  colors.h  draw.cpp  draw.h
